tests/stable/errors.stderr
error: just an item error
  --- note: see an item
 --> $DIR/errors.rs:5:16
  |
5 |         error: just an item error,
  |                ^^^^

error: [help] I can help with that
 --> $DIR/errors.rs:7:15
  |
7 |         help: I can help with that,
  |               ^

error: just an expression error item context
  --- note: see an exp
  --- warning: kind of weird
  --> $DIR/errors.rs:11:16
   |
11 |         error: just an expression error item context,
   |                ^^^^

error: [help] I can help with that
  --> $DIR/errors.rs:14:15
   |
14 |         help: I can help with that,
   |               ^

error: just an expression error expr content
  --- warning: oh no
  --> $DIR/errors.rs:18:16
   |
18 |         error: just an expression error expr content,
   |                ^^^^

error: this is an item error message
  --> $DIR/errors.rs:24:12
   |
24 |     error: this is an item error message,
   |            ^^^^

error: this is an error message
  --- note: but it has a note
  --> $DIR/errors.rs:28:12
   |
28 |     error: this is an error message,
   |            ^^^^

error: hello
  --> $DIR/errors.rs:33:12
   |
33 |     error: hello,
   |            ^^^^^

error: [warning] just wanted to warn you
  --> $DIR/errors.rs:34:14
   |
34 |     warning: just wanted to warn you,
   |              ^^^^

error: [note] just jotting things down
  --- help: please help on that note
  --- note: notes on notes
  --> $DIR/errors.rs:35:11
   |
35 |     note: just jotting things down,
   |           ^^^^

error: [warning] hello not found
  --- note: just a note to say hi
  --- help: its a good idea to say hello
  --> $DIR/errors.rs:41:14
   |
41 |     warning: hello not found,
   |              ^^^^^

error: unknown diagnostic kind
  --- help: expected one of: 'error', 'warning', 'note', 'help'
  --- note: or their _ versions
  --> $DIR/errors.rs:47:5
   |
47 |     hello: hello,
   |     ^^^^^

error: [help] this is standalone help
  --- note: but we add things to it
  --- help: like more help
  --> $DIR/errors.rs:51:11
   |
51 |     help: this is standalone help,
   |           ^^^^
